--- a/templates/bigdata_project.html
+++ b/templates/bigdata_project.html
@@ -156,7 +156,7 @@
                     <img src="images/person_1.jpg" alt="Image placeholder">
                   </div>
                   <div class="comment-body">
-                    <h3>John Doe</h3>
+                    <h3>John Doe</h3>exploaratory analysis of Big Datasets of Ethereum using Big Data tools such as Hadoop and Spark in python. The entire project details including code and explanation is present in my
                     <div class="meta">Sept. 12, 2019 at 2:21pm</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
                     <p><a href="#" class="reply">Reply</a></p>
@@ -354,7 +354,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Data Science Graduate highly skilled in drawing meaningful insights from data using advanced analytics. Key Skills are in the area of Big Data Analytics, Cloud Computing, Machine Learning and Deep Learning. Experienced Senior Software Engineer with a demonstrated history of working in the Information technology and services industry.</p>
+              <p>Exploaratory analysis on Big Datasets of Ethereum using Big Data tools such as Hadoop and Spark in python.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/ninja27494/"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="https://twitter.com/Ninjha_27"><span class="icon-twitter"></span></a></li>
