--- a/templates/cineplex_project.html
+++ b/templates/cineplex_project.html
@@ -347,7 +347,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Data Science Graduate highly skilled in drawing meaningful insights from data using advanced analytics. Key Skills are in the area of Big Data Analytics, Cloud Computing, Machine Learning and Deep Learning. Experienced Senior Software Engineer with a demonstrated history of working in the Information technology and services industry.</p>
+              <p>A Data driven approach on identifying the best location in London to build a Cineplex</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/ninja27494/"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="https://twitter.com/Ninjha_27"><span class="icon-twitter"></span></a></li>
