--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#page-3" class="nav-link"><span>Skills</span></a></li>
-	          <!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li> -->
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Certifications</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -579,36 +579,59 @@
     </section>
 
 
-    <!-- <section class="ftco-section ftco-project" id="projects-section">
+    <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h2 class="mb-4">Certifications</h2>
+            <p>Online Certification and Badges</p>
           </div>
         </div>
-    		<div class="row no-gutters">
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="c096651b-e92c-4c5d-9522-14703af20683" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Machine Learning with Python -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="8bcc5805-8b49-4983-a0ae-15364ca41bbc" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Data Visualization with Python -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="7fdf4d9d-a48b-4891-aebb-3316a38dfa74" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Data Analysis with Python -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="86573db7-44d2-4a7c-8b8a-4a524856db73" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Databases and SQL for Data Science -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="e5b1f55b-5c9c-45ad-bfcf-5cc2c9f0d9cd" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script> <br>  <!-- Python for Data Science and AI-->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="615df8bb-c864-40e8-9f77-2d56c8bd78fe" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Data Science Orientation -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="d14218c4-1317-4d22-bfc4-f27711640a65" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Applied Data Science Capstone -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="3f4af240-b261-466d-b25b-6b0b83d0c4b9" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Data Science Professional Certificate -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="6c017d1e-658d-402f-8110-8a672640f672" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Data Science Methodology -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="40be19aa-3433-4416-9ffd-25cd845cab43" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script> <br> <!-- Data Science Foundations level 1 -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="ebb2267a-2245-48f6-95ff-c4f88a3dd603" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Data Science Foundations level 2 -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="abf96e11-6b2e-436a-bbb2-11083112b8f0" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Hadoop foundations level-1 -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="2595936e-6d94-4b5d-87e5-5b5a6e3e5812" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Spark level 1 -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="a168eed9-316e-43e9-a922-4c0047962614" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Big Data Foundations level 1 -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="8867bc86-e584-4702-a3de-25260a8e58e1" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- Big Data Foundations level 2 -->
+        <div data-iframe-width="350" data-iframe-height="300" data-share-badge-id="0e5dcf35-8899-4325-b386-8efba3877361" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>  <!-- IBM CLoud Essentials -->
+        <div data-iframe-width="450" data-iframe-height="300" data-share-badge-id="1c81c48d-84db-44a8-9dea-d516c8e11759" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+
+        <!-- <div data-iframe-width="600" data-iframe-height="300" data-share-badge-id="3f4af240-b261-466d-b25b-6b0b83d0c4b9" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="600" data-iframe-height="300" data-share-badge-id="a168eed9-316e-43e9-a922-4c0047962614" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+        <div data-iframe-width="600" data-iframe-height="300" data-share-badge-id="8867bc86-e584-4702-a3de-25260a8e58e1" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script> -->
+    		<!-- <div class="row no-gutters">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(./static/images/work-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(./static/images/certificate_1.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://coursera.org/verify/professional-cert/KSCUC6L8MDJ8" target="_blank">IBM Certified Data Science Professional</a></h3>
+	    					<a href="https://www.youracclaim.com/badges/3f4af240-b261-466d-b25b-6b0b83d0c4b9" target="_blank"><span>Digital Badge</span></a><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8bcc5805-8b49-4983-a0ae-15364ca41bbc" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(./static/images/work-2.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(./static/images/big_data_foundations.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a>Big Data Foundations</a></h3>
+                <a href="https://www.youracclaim.com/badges/a168eed9-316e-43e9-a922-4c0047962614/public_url" target="_blank"><span>Level 1</span></a><br>
+                <a href="https://www.youracclaim.com/badges/8867bc86-e584-4702-a3de-25260a8e58e1/public_url" target="_blank"><span>Level 2</span></a>
 	    				</div>
     				</div>
-  				</div>
+  				</div> -->
 
-    			<div class="col-md-4">
+
+    			<!-- <div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(./static/images/work-3.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -685,10 +708,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
-    <section class="ftco-section" id="blog-section">
+    <!-- <section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
